...
    "comments.delete" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete my comment"
          }
        }
      }
    },
    "comments.deleted" : {
      "extractionState" : "manual",
...
    "comments.reason.spam" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spam or advertising"
          }
        }
      }
    },
    "comments.reason.violence" : {
      "extractionState" : "manual",
...
    "comments.report" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Report"
          }
        }
      }
    },
    "comments.reportTitle" : {
      "extractionState" : "manual",
...
